Create Skills, Post and Role schemas. Run Prisma initial migration. Run query to check database is connected and empty

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.17.2"
+    "@prisma/client": "^3.7.0",
+    "express": "^4.17.2",
+    "prisma": "^3.7.0"
   },
   "name": "post-a-project-backend",
   "description": "Post a Project backend application using express",
