--- a/package.json
+++ b/package.json
@@ -25,9 +25,15 @@
   "homepage": "https://github.com/mfconsolani/post-a-project-backend#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.9",
     "@types/node": "^17.0.6",
+    "faker": "^6.6.6",
     "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
