--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production node ./dist/app.js",
-    "dev": "NODE_ENV=development ts-node-dev ./src/app.ts",
+    "dev": "NODE_ENV=development ts-node-dev --respawn ./src/app.ts",
     "build": "tsc -p ."
   },
   "repository": {
