--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@types/winston": "^2.4.4",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "prisma": "^3.7.0",
     "winston": "^3.3.3"
   },
@@ -32,6 +34,8 @@
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/node": "^17.0.6",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
     "faker": "^5.5.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
