--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@prisma/client": "^3.7.0",
     "@types/morgan": "^1.9.3",
     "@types/winston": "^2.4.4",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
@@ -31,6 +33,7 @@
   },
   "homepage": "https://github.com/mfconsolani/post-a-project-backend#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/node": "^17.0.6",
