--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "@prisma/client": "^3.7.0",
     "@types/morgan": "^1.9.3",
     "@types/winston": "^2.4.4",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.0.0",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
@@ -36,6 +37,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.6",
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
