--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@prisma/client": "^3.7.0",
+    "@types/cors": "^2.8.12",
     "@types/morgan": "^1.9.3",
     "@types/winston": "^2.4.4",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
