--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/morgan": "^1.9.3",
     "@types/winston": "^2.4.4",
     "bcrypt": "^5.0.0",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
