--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/cors": "^2.8.12",
     "@types/morgan": "^1.9.3",
     "@types/winston": "^2.4.4",
+    "aws-sdk": "^2.1159.0",
     "bcrypt": "^5.0.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
@@ -13,6 +14,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "prisma": "^3.7.0",
@@ -43,7 +45,8 @@
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^17.0.6",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^17.0.45",
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
     "faker": "^5.5.3",
